<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.efelnic.driveapp.MainActivity"
    android:background="#514d4d">

    <Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/Ready_name"
    android:id="@+id/readyButton"
    android:textColor="#ffffff"
    android:paddingLeft="70dp"
    android:paddingRight="70dp"
    android:paddingTop="30dp"
    android:paddingBottom="30dp"
        android:layout_margin="10dp"
    android:textSize="30sp"
    android:background="#059326"
    android:layout_centerHorizontal="true"
        android:onClick="goToTrackingActivity" />

    <ImageView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:src="@drawable/flag"
        android:id="@+id/FlagImage"
        android:layout_marginTop="30dp"
        android:layout_toRightOf="@+id/readyButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Script_name"
        android:id="@+id/ScriptButton"
        android:paddingLeft="60dp"
        android:paddingRight="60dp"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        android:layout_margin="20dp"
        android:textSize="25sp"
        android:background="#2f6be9"
        android:layout_below="@+id/readyButton"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:src="@drawable/script"
        android:id="@+id/ScriptImage"
        android:layout_marginTop="155dp"
        android:layout_toRightOf="@+id/ScriptButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Recordings_name"
        android:id="@+id/RecordingsButton"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        android:layout_margin="20dp"
        android:textSize="25sp"
        android:background="#5463ee"
        android:layout_below="@+id/ScriptButton"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:src="@drawable/analytics"
        android:id="@+id/AnalyticsImage"
        android:layout_marginTop="270dp"
        android:layout_toRightOf="@+id/RecordingsButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/About_name"
        android:id="@+id/AboutButton"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:textSize="15sp"
        android:background="#a7ace1"
        android:layout_below="@+id/RecordingsButton"
        android:layout_margin="30dp"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:src="@drawable/info"
        android:id="@+id/AboutImage"
        android:layout_marginTop="388dp"
        android:layout_toRightOf="@+id/AboutButton" />

</RelativeLayout>
